sundry/x.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp: null
  labels:
    mojaloop.service: auditing-svc
    vnext.layer: crosscut
  name: auditing-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      mojaloop.service: auditing-svc
    vnext.layer: crosscut
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        mojaloop.service: auditing-svc
    vnext.layer: crosscut
    spec:
      containers:
        - env:
            - name: ELASTICSEARCH_AUDITS_INDEX
              value: ml-auditing
            - name: ELASTICSEARCH_PASSWORD
              value: elasticSearchPas42
            - name: ELASTICSEARCH_URL
              value: https://es01:9200
            - name: ELASTICSEARCH_USERNAME
              value: elastic
            - name: KAFKA_AUDITS_TOPIC
              value: audits
            - name: KAFKA_LOGS_TOPIC
              value: logs
            - name: KAFKA_URL
              value: kafka:9092
          image: mojaloop/auditing-bc-auditing-svc:alpha-latest
          name: auditing-svc
          resources: {}
          volumeMounts:
            - mountPath: /app/data
              name: auditing-svc-data
      restartPolicy: Always
      volumes:
        - name: auditing-svc-data
          persistentVolumeClaim:
            claimName: auditing-svc-data
status: {}
